Update navigation link text in index.html

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         </header>
 
         <nav class="navigation">
-            <a href="index.html" class="nav-link active">📊 Dashboard Principal</a>
+            <a href="index.html" class="nav-link active">📊 Language</a>
             <a href="Impacto Enriquecimento Language.html" class="nav-link">📈 Language Dashboard</a>
             <a href="Impacto Enriquecimento Fun Quest e Angles.html" class="nav-link">🎯 Fun Quest & Angles</a>
         </nav>
