Update header title in index.html

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>📊 Impacto Enriquecimento Language</h1>
+            <h1>📊 Impacto Enriquecimento </h1>
             <p class="subtitle">Análise Comparativa de Desempenho por volume</p>
         </header>
 
